--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@livepeer/react": "^1.5.6",
+    "@livepeer/webrtmp-sdk": "^0.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
