--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "video-stream-merger": "^4.0.1",
     "web-vitals": "^2.1.0",
     "zustand": "^4.3.2"
   },
